--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -8,20 +8,21 @@
     xmlns:interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
     >
 
+	<SolidColorBrush x:Key="controlColor" company:OSBrush.OSColor="ControlColor" />
+	<SolidColorBrush x:Key="windowColor" company:OSBrush.OSColor="WindowColor" />
+	<SolidColorBrush x:Key="controlTextColor" company:OSBrush.OSColor="ControlTextColor" />
+	<SolidColorBrush x:Key="controlDarkDarkColor" company:OSBrush.OSColor="ControlDarkDarkColor" />
+	<SolidColorBrush x:Key="controlDarkColor" company:OSBrush.OSColor="ControlDarkColor" />
+	<SolidColorBrush x:Key="highlightColor" company:OSBrush.OSColor="HighlightColor" />
+	<SolidColorBrush x:Key="highlightTextColor" company:OSBrush.OSColor="HighlightTextColor" />
+	<SolidColorBrush x:Key="activeBorderColor" company:OSBrush.OSColor="ActiveBorderColor" />
+
 	<controllers:NumberToVisibilityConverter x:Key="numberToVisibilityConverter" />
 
 	<Style TargetType="company:DataGrid">
 		<Setter Property="IsTabStop" Value="False" />
-		<Setter Property="Background">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="WindowColor" />
-			</Setter.Value>
-		</Setter>
-		<Setter Property="Foreground">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="ControlTextColor" />
-			</Setter.Value>
-		</Setter>
+		<Setter Property="Background" Value="{StaticResource windowColor}" />
+		<Setter Property="Foreground" Value="{StaticResource controlTextColor}" />
 		<Setter Property="ItemsPanel">
 			<Setter.Value>
 				<ItemsPanelTemplate>
@@ -106,11 +107,7 @@
 	<Style TargetType="company:HeaderCell">
 		<Setter Property="MinHeight" Value="22" />
 		<Setter Property="IsTabStop" Value="False" />
-		<Setter Property="Background">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="ControlColor" />
-			</Setter.Value>
-		</Setter>
+		<Setter Property="Background" Value="{StaticResource controlColor}" />
 		<Setter Property="Padding" Value="6,3,6,3" />
 		<Setter Property="controllers:StyleBinder.Bindings">
 			<Setter.Value>
@@ -149,10 +146,8 @@
 											<ContentPresenter Margin="{TemplateBinding Padding}" />
 											<Path Name="SortArrow" RenderTransformOrigin=".5,.5" HorizontalAlignment="Right" 
                                                   VerticalAlignment="Center" Opacity="0" Stretch="Uniform" Width="8" Margin="4,0,0,0" 
-                                                  Data="F1 M -5.215,6.099L 5.215,6.099L 0,0L -5.215,6.099 Z " Grid.Column="1">
-												<Path.Fill>
-													<SolidColorBrush company:OSBrush.OSColor="ControlDarkDarkColor" />
-												</Path.Fill>
+                                                  Data="F1 M -5.215,6.099L 5.215,6.099L 0,0L -5.215,6.099 Z " Grid.Column="1"
+												  Fill="{StaticResource controlDarkDarkColor}">
 												<Path.RenderTransform>
 													<ScaleTransform ScaleX=".9" ScaleY=".9" />
 												</Path.RenderTransform>
@@ -191,11 +186,8 @@
 									</ControlTemplate>
 								</Thumb.Template>
 							</Thumb>
-							<Rectangle Width="1" HorizontalAlignment="Right" Grid.Column="2">
-								<Rectangle.Fill>
-									<SolidColorBrush company:OSBrush.OSColor="ControlDarkColor" />
-								</Rectangle.Fill>
-							</Rectangle>
+							<Rectangle Width="1" HorizontalAlignment="Right" Grid.Column="2"
+									   Fill="{StaticResource controlDarkColor}" />
 						</Grid>
 					</Border>
 				</ControlTemplate>
@@ -205,16 +197,8 @@
 
 	<Style TargetType="company:Row">
 		<Setter Property="BorderThickness" Value="0,0,0,1" />
-		<Setter Property="BorderBrush">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="ActiveBorderColor" />
-			</Setter.Value>
-		</Setter>
-		<Setter Property="Background">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="WindowColor" />
-			</Setter.Value>
-		</Setter>
+		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
+		<Setter Property="Background" Value="{StaticResource windowColor}" />
 		<Setter Property="ItemsPanel">
 			<Setter.Value>
 				<ItemsPanelTemplate>
@@ -238,11 +222,7 @@
 								<VisualState Name="Focused">
 									<Storyboard>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
-													<SolidColorBrush company:OSBrush.OSColor="HighlightColor" />
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{StaticResource highlightColor}" />
 										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderThickness">
 											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="1" />
@@ -258,18 +238,10 @@
 								<VisualState Name="Selected">
 									<Storyboard>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
-													<SolidColorBrush company:OSBrush.OSColor="HighlightColor" />
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{StaticResource highlightColor}" />
 										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
-													<SolidColorBrush company:OSBrush.OSColor="HighlightTextColor" />
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{StaticResource highlightTextColor}" />
 										</ObjectAnimationUsingKeyFrames>
 									</Storyboard>
 								</VisualState>
@@ -310,11 +282,7 @@
 		</Setter>
 		<Setter Property="Padding" Value="6,3,6,3" />
 		<Setter Property="BorderThickness" Value="0,0,1,0" />
-		<Setter Property="BorderBrush">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="ActiveBorderColor" />
-			</Setter.Value>
-		</Setter>
+		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="company:Cell">
@@ -332,11 +300,7 @@
 								<VisualState Name="Focused">
 									<Storyboard>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
-													<SolidColorBrush company:OSBrush.OSColor="ControlTextColor" />
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{StaticResource controlTextColor}" />
 										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderThickness">
 											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="2" />
@@ -352,18 +316,10 @@
 								<VisualState Name="Selected">
 									<Storyboard>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
-													<SolidColorBrush company:OSBrush.OSColor="HighlightColor" />
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{StaticResource highlightColor}" />
 										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
-													<SolidColorBrush company:OSBrush.OSColor="HighlightTextColor" />
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{StaticResource highlightTextColor}" />
 										</ObjectAnimationUsingKeyFrames>
 									</Storyboard>
 								</VisualState>
@@ -465,7 +421,7 @@
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
 														<TextBox Text="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                                                                 SelectionLength="1000000000" company:ControlExtensions.FocusOnLoad="True" />
+                                                                 SelectionLength="1000000000" />
 													</DataTemplate>
 												</DiscreteObjectKeyFrame.Value>
 											</DiscreteObjectKeyFrame>
@@ -479,13 +435,9 @@
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
 														<toolkit:NumericUpDown Value="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
-                                                                                    Minimum="-1000000000" Maximum="1000000000" IsTabStop="False" company:ControlExtensions.FocusOnLoad="True">
-															<toolkit:NumericUpDown.Background>
-																<SolidColorBrush company:OSBrush.OSColor="WindowColor" />
-															</toolkit:NumericUpDown.Background>
-															<toolkit:NumericUpDown.Foreground>
-																<SolidColorBrush company:OSBrush.OSColor="ControlTextColor" />
-															</toolkit:NumericUpDown.Foreground>
+                                                                                    Minimum="-1000000000" Maximum="1000000000" IsTabStop="False" 
+																			   Background="{StaticResource windowColor}"
+																			   Foreground="{StaticResource controlTextColor}">
 															<toolkit:NumericUpDown.Template>
 																<ControlTemplate TargetType="toolkit:NumericUpDown">
 																	<Grid>
@@ -546,11 +498,7 @@
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
 														<sdk:DatePicker SelectedDate="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                                                                        company:ControlExtensions.FocusOnLoad="True">
-															<sdk:DatePicker.Foreground>
-																<SolidColorBrush company:OSBrush.OSColor="ControlTextColor" />
-															</sdk:DatePicker.Foreground>
-														</sdk:DatePicker>
+																		Foreground="{StaticResource controlTextColor}" />
 													</DataTemplate>
 												</DiscreteObjectKeyFrame.Value>
 											</DiscreteObjectKeyFrame>
@@ -567,16 +515,8 @@
 	
 	<Style TargetType="company:FooterRow">
 		<Setter Property="BorderThickness" Value="1,0,0,1" />
-		<Setter Property="BorderBrush">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="ActiveBorderColor" />
-			</Setter.Value>
-		</Setter>
-		<Setter Property="Background">
-			<Setter.Value>
-				<SolidColorBrush company:OSBrush.OSColor="WindowColor" />
-			</Setter.Value>
-		</Setter>
+		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
+		<Setter Property="Background" Value="{StaticResource windowColor}" />
 		<Setter Property="ItemsPanel">
 			<Setter.Value>
 				<ItemsPanelTemplate>
