A really strange fix for a case where the scrolling synchronization was broken: a two-way binding between the horizontal scroll bar and the HorizontalOffset property of the main scroll. This should've crashed because ScrollViewer.HorizontalOffset is read-only but instead it fixed the bug.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -41,7 +41,7 @@
 								<RowDefinition Height="Auto" />
 								<RowDefinition Height="Auto" />
 							</Grid.RowDefinitions>
-							<company:HeaderRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
+							<company:HeaderRow Margin="0,0,18,0" ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
                                                Visibility="{Binding HeaderVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
 											   Tag="{Binding ElementName=horizontalScrollBar}" />
 							<ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto" 
@@ -61,7 +61,7 @@
 									   Visibility="{Binding Maximum, RelativeSource={RelativeSource Self}, 
 															Converter={StaticResource numberToVisibilityConverter}}" 
                                        Orientation="Horizontal" ViewportSize="{Binding ViewportWidth}" 
-                                       Maximum="{Binding ScrollableWidth}" />
+                                       Maximum="{Binding ScrollableWidth}" Value="{Binding HorizontalOffset, Mode=TwoWay}" />
 						</Grid>
 					</Border>
 				</ControlTemplate>
