--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -41,27 +41,46 @@
 								<RowDefinition Height="Auto" />
 								<RowDefinition Height="Auto" />
 							</Grid.RowDefinitions>
-							<company:HeaderRow Margin="0,0,18,0" ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
-                                               Visibility="{Binding HeaderVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-											   Tag="{Binding ElementName=horizontalScrollBar}" />
-							<ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto" 
-										  HorizontalScrollBarVisibility="Hidden" Padding="0" 
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<company:HeaderRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
+												   Visibility="{Binding HeaderVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+												   Tag="{Binding ElementName=horizontalScrollBar}" />
+								<TextBlock Grid.Column="1" Width="18" Visibility="{Binding ComputedVerticalScrollBarVisibility, ElementName=mainScroll}" />
+							</Grid>
+							<ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto"
+										  HorizontalScrollBarVisibility="Hidden" Padding="0"
 										  controllers:ScrollExtensions.HorizontalOffset="{Binding Value, ElementName=horizontalScrollBar}">
 								<interactivity:Interaction.Behaviors>
 									<controllers:ScrollIntoViewBehavior />
 								</interactivity:Interaction.Behaviors>
 								<ItemsPresenter />
 							</ScrollViewer>
-							<company:FooterRow Grid.Row="2" Margin="0,0,18,0" ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}" 
-											   Visibility="{Binding FooterVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-											   DataContext="{Binding Items, RelativeSource={RelativeSource TemplatedParent}}" 
-											   Tag="{Binding ElementName=horizontalScrollBar}" />
-							<ScrollBar Name="horizontalScrollBar" Grid.Row="3" IsTabStop="False" Margin="0,0,18,0" 
-									   DataContext="{Binding ElementName=mainScroll}" 
-									   Visibility="{Binding Maximum, RelativeSource={RelativeSource Self}, 
-															Converter={StaticResource numberToVisibilityConverter}}" 
-                                       Orientation="Horizontal" ViewportSize="{Binding ViewportWidth}" 
-                                       Maximum="{Binding ScrollableWidth}" Value="{Binding HorizontalOffset, Mode=TwoWay}" />
+							<Grid Grid.Row="2">
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<company:FooterRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
+												   Visibility="{Binding FooterVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+												   DataContext="{Binding Items, RelativeSource={RelativeSource TemplatedParent}}"
+												   Tag="{Binding ElementName=horizontalScrollBar}" />
+								<ScrollBar Name="horizontalScrollBar" Grid.Row="1" IsTabStop="False"
+										   DataContext="{Binding ElementName=mainScroll}"
+										   Visibility="{Binding Maximum, RelativeSource={RelativeSource Self},
+																Converter={StaticResource numberToVisibilityConverter}}"
+										   Orientation="Horizontal" ViewportSize="{Binding ViewportWidth}"
+										   Maximum="{Binding ScrollableWidth}" Value="{Binding HorizontalOffset, Mode=TwoWay}" />
+								<TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Width="18"
+										   Visibility="{Binding ComputedVerticalScrollBarVisibility, ElementName=mainScroll}" />
+							</Grid>
 						</Grid>
 					</Border>
 				</ControlTemplate>
