Removed the hack selecting all text of an editing text box because apparently in SL 4 binding TextBox.SelectionLength works properly.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -440,7 +440,7 @@
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
 														<TextBox Text="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                                                                 SelectionLength="1000000000" />
+                                                                 SelectionLength="{Binding Text.Length, RelativeSource={RelativeSource Self}, Mode=OneTime}" />
 													</DataTemplate>
 												</DiscreteObjectKeyFrame.Value>
 											</DiscreteObjectKeyFrame>
