Removed the wrapping in the default template of the cell because it turned out that wrapping works not only on empty spaces.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -297,7 +297,7 @@
 		<Setter Property="ContentTemplate">
 			<Setter.Value>
 				<DataTemplate>
-					<TextBlock Text="{Binding}" TextWrapping="Wrap" TextTrimming="WordEllipsis" />
+					<TextBlock Text="{Binding}" TextTrimming="WordEllipsis" />
 				</DataTemplate>
 			</Setter.Value>
 		</Setter>
