Moved the leaving of the edited state on lost focus to the controller of the cell. Changed the cells in the new row to always be in edit mode. issue: 56.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -54,7 +54,7 @@
 												   Visibility="{Binding HeaderVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
 												   Tag="{Binding ElementName=horizontalScrollBar}" />
 								<company:NewRow Grid.Row="1" ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
-												Tag="{Binding ElementName=horizontalScrollBar}" />
+												TabNavigation="Cycle" Tag="{Binding ElementName=horizontalScrollBar}" />
 								<TextBlock Grid.Column="1" Grid.RowSpan="2" Width="18" Visibility="{Binding ComputedVerticalScrollBarVisibility, ElementName=mainScroll}" />
 							</Grid>
 							<ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto"
