--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -541,9 +541,8 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-	
-	<Style TargetType="company:FooterRow">
-		<Setter Property="BorderThickness" Value="1,0,1,1" />
+
+	<Style TargetType="company:Row" x:Key="specialRow">
 		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
 		<Setter Property="Background" Value="{StaticResource windowColor}" />
 		<Setter Property="HorizontalAlignment" Value="Left" />
@@ -557,7 +556,7 @@
 		<Setter Property="IsTabStop" Value="False" />
 		<Setter Property="Template">
 			<Setter.Value>
-				<ControlTemplate TargetType="company:FooterRow">
+				<ControlTemplate TargetType="company:Row">
 					<Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}">
 						<ScrollViewer IsTabStop="False" BorderThickness="0" Padding="0" 
@@ -574,6 +573,14 @@
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
+	</Style>
+
+	<Style TargetType="company:NewRow" BasedOn="{StaticResource specialRow}">
+		<Setter Property="BorderThickness" Value="1,0,1,1" />
+	</Style>
+	
+	<Style TargetType="company:FooterRow" BasedOn="{StaticResource specialRow}">
+		<Setter Property="BorderThickness" Value="1,1,1,0" />
 	</Style>
 
 </ResourceDictionary>
