Fixed a regression: an exception in the controller of the header cell when loading the data grid. Fixed the bug causing the focus to move to the last cell of the new row. issue: #56
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -382,7 +382,7 @@
 											<DiscreteObjectKeyFrame KeyTime="0:0:0">
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
-														<company:Editor Content="{Binding}"
+														<company:Editor Content="{Binding}" HasFocus="{Binding Tag.HasFocus, RelativeSource={RelativeSource TemplatedParent}}"
 																		Value="{Binding Tag.Value, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                                                         DataType="{Binding Tag.DataType, RelativeSource={RelativeSource TemplatedParent}}" />
 													</DataTemplate>
