Fixed the synchronization between a scroll and the ScrollExtensions class which completes the ability to bind to the offsets. issue: #56
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -533,6 +533,7 @@
 																							  Mode=TwoWay}">
 							<interactivity:Interaction.Behaviors>
 								<controllers:ScrollIntoViewBehavior />
+								<controllers:SyncScrollBehavior />
 							</interactivity:Interaction.Behaviors>
 							<ItemsPresenter />
 						</ScrollViewer>
