Readded a controller to the data grid. Fixed the occasional needless scrolling on arrow down.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -63,6 +63,9 @@
 								<interactivity:Interaction.Behaviors>
 									<controllers:ScrollOnHomeEndBehaviour />
 								</interactivity:Interaction.Behaviors>
+								<widgets:DataGridFacade.Controllers>
+									<controllers:ScrollIntoViewController />
+								</widgets:DataGridFacade.Controllers>
 								<ItemsPresenter>
 									<interactivity:Interaction.Behaviors>
 										<controllers:HandleNavigationBehaviour />
@@ -538,7 +541,7 @@
 								<controllers:SyncScrollBehavior />
 							</interactivity:Interaction.Behaviors>
 							<widgets:DataGridFacade.Controllers>
-								<controllers:ScrollIntoViewBehavior />
+								<controllers:ScrollIntoViewController />
 							</widgets:DataGridFacade.Controllers>
 							<ItemsPresenter />
 						</ScrollViewer>
