--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -435,6 +435,51 @@
 	
 	<controllers:IsTypeNumericConverter x:Key="isTypeNumericConverter" />
 
+	<ControlTemplate x:Key="numericUpDownTemplate" TargetType="toolkit:NumericUpDown">
+		<Grid>
+			<VisualStateManager.VisualStateGroups>
+				<VisualStateGroup x:Name="CommonStates">
+					<VisualStateGroup.Transitions>
+						<VisualTransition GeneratedDuration="0" />
+					</VisualStateGroup.Transitions>
+					<VisualState x:Name="Normal" />
+					<VisualState x:Name="Disabled">
+						<Storyboard>
+							<DoubleAnimation Duration="0" Storyboard.TargetName="DisabledVisualElement" Storyboard.TargetProperty="(UIElement.Opacity)" To="1" />
+						</Storyboard>
+					</VisualState>
+				</VisualStateGroup>
+				<VisualStateGroup x:Name="FocusStates">
+					<VisualState x:Name="Focused">
+						<Storyboard>
+							<DoubleAnimationUsingKeyFrames Storyboard.TargetName="FocusVisualElement" Storyboard.TargetProperty="Opacity">
+								<SplineDoubleKeyFrame KeyTime="0" Value="1" />
+							</DoubleAnimationUsingKeyFrames>
+						</Storyboard>
+					</VisualState>
+					<VisualState x:Name="Unfocused" />
+				</VisualStateGroup>
+			</VisualStateManager.VisualStateGroups>
+			<toolkit:ButtonSpinner Background="{TemplateBinding Background}" IsTabStop="{TemplateBinding IsTabStop}" x:Name="Spinner" MinWidth="35" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+				<TextBox BorderThickness="0" FontFamily="{TemplateBinding FontFamily}" FontSize="{TemplateBinding FontSize}" FontStretch="{TemplateBinding FontStretch}" FontStyle="{TemplateBinding FontStyle}" FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" MinWidth="20" x:Name="Text" AcceptsReturn="False" Text="{TemplateBinding Value}" TextAlignment="Right" TextWrapping="NoWrap">
+					<TextBox.Style>
+						<Style TargetType="TextBox">
+							<Setter Property="Template">
+								<Setter.Value>
+									<ControlTemplate TargetType="TextBox">
+										<ScrollViewer x:Name="ContentElement" Padding="0" BorderThickness="0" />
+									</ControlTemplate>
+								</Setter.Value>
+							</Setter>
+						</Style>
+					</TextBox.Style>
+				</TextBox>
+			</toolkit:ButtonSpinner>
+			<Border x:Name="DisabledVisualElement" IsHitTestVisible="false" Opacity="0" Background="#A5FFFFFF" CornerRadius="2.5,2.5,2.5,2.5" />
+			<Border x:Name="FocusVisualElement" IsHitTestVisible="False" Opacity="0" BorderBrush="#FF45D6FA" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="1,1,1,1" />
+		</Grid>
+	</ControlTemplate>
+
 	<Style TargetType="company:Editor">
 		<Setter Property="IsTabStop" Value="False" />
 		<Setter Property="Template">
@@ -466,56 +511,9 @@
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
 														<toolkit:NumericUpDown Value="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
-                                                                                    Minimum="-1000000000" Maximum="1000000000" IsTabStop="False" 
+                                                                               Minimum="-1000000000" Maximum="1000000000" IsTabStop="False" 
 																			   Background="{StaticResource windowColor}"
-																			   Foreground="{StaticResource controlTextColor}">
-															<toolkit:NumericUpDown.Template>
-																<ControlTemplate TargetType="toolkit:NumericUpDown">
-																	<Grid>
-																		<VisualStateManager.VisualStateGroups>
-																			<VisualStateGroup x:Name="CommonStates">
-																				<VisualStateGroup.Transitions>
-																					<VisualTransition GeneratedDuration="0" />
-																				</VisualStateGroup.Transitions>
-																				<VisualState x:Name="Normal" />
-																				<VisualState x:Name="Disabled">
-																					<Storyboard>
-																						<DoubleAnimation Duration="0" Storyboard.TargetName="DisabledVisualElement" Storyboard.TargetProperty="(UIElement.Opacity)" To="1" />
-																					</Storyboard>
-																				</VisualState>
-																			</VisualStateGroup>
-																			<VisualStateGroup x:Name="FocusStates">
-																				<VisualState x:Name="Focused">
-																					<Storyboard>
-																						<DoubleAnimationUsingKeyFrames Storyboard.TargetName="FocusVisualElement" Storyboard.TargetProperty="Opacity">
-																							<SplineDoubleKeyFrame KeyTime="0" Value="1" />
-																						</DoubleAnimationUsingKeyFrames>
-																					</Storyboard>
-																				</VisualState>
-																				<VisualState x:Name="Unfocused" />
-																			</VisualStateGroup>
-																		</VisualStateManager.VisualStateGroups>
-																		<toolkit:ButtonSpinner Background="{TemplateBinding Background}" IsTabStop="{TemplateBinding IsTabStop}" x:Name="Spinner" MinWidth="35" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-																			<TextBox BorderThickness="0" FontFamily="{TemplateBinding FontFamily}" FontSize="{TemplateBinding FontSize}" FontStretch="{TemplateBinding FontStretch}" FontStyle="{TemplateBinding FontStyle}" FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" MinWidth="20" x:Name="Text" AcceptsReturn="False" Text="{TemplateBinding Value}" TextAlignment="Right" TextWrapping="NoWrap">
-																				<TextBox.Style>
-																					<Style TargetType="TextBox">
-																						<Setter Property="Template">
-																							<Setter.Value>
-																								<ControlTemplate TargetType="TextBox">
-																									<ScrollViewer x:Name="ContentElement" Padding="0" BorderThickness="0" />
-																								</ControlTemplate>
-																							</Setter.Value>
-																						</Setter>
-																					</Style>
-																				</TextBox.Style>
-																			</TextBox>
-																		</toolkit:ButtonSpinner>
-																		<Border x:Name="DisabledVisualElement" IsHitTestVisible="false" Opacity="0" Background="#A5FFFFFF" CornerRadius="2.5,2.5,2.5,2.5" />
-																		<Border x:Name="FocusVisualElement" IsHitTestVisible="False" Opacity="0" BorderBrush="#FF45D6FA" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="1,1,1,1" />
-																	</Grid>
-																</ControlTemplate>
-															</toolkit:NumericUpDown.Template>
-														</toolkit:NumericUpDown>
+																			   Foreground="{StaticResource controlTextColor}" Template="{StaticResource numericUpDownTemplate}" />       
 													</DataTemplate>
 												</DiscreteObjectKeyFrame.Value>
 											</DiscreteObjectKeyFrame>
