--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -110,18 +110,9 @@
 		<Setter Property="IsTabStop" Value="False" />
 		<Setter Property="Background" Value="{StaticResource controlColor}" />
 		<Setter Property="Padding" Value="6,3,6,3" />
-		<Setter Property="controllers:StyleBinder.Bindings">
-			<Setter.Value>
-				<controllers:StyleBindingCollection>
-					<controllers:StyleBinding Property="Content"
-                                              Binding="{Binding Column.Header, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-					<controllers:StyleBinding Property="Width" 
-                                              Binding="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-					<controllers:StyleBinding Property="Visibility" 
-                                              Binding="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-				</controllers:StyleBindingCollection>
-			</Setter.Value>
-		</Setter>
+		<Setter Property="Content" Value="{Binding Column.Header, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
+		<Setter Property="Width" Value="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
+		<Setter Property="Visibility" Value="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="company:HeaderCell">
@@ -278,19 +269,11 @@
 		<Setter Property="MinHeight" Value="22" />
 		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="VerticalContentAlignment" Value="Center" />
-		<Setter Property="controllers:StyleBinder.Bindings">
-			<Setter.Value>
-				<controllers:StyleBindingCollection>
-					<controllers:StyleBinding Property="Width" 
-                                              Binding="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-					<controllers:StyleBinding Property="HorizontalContentAlignment"
-                                              Binding="{Binding DataType, RelativeSource={RelativeSource Self}, 
-                                                        Converter={StaticResource typeToAlignmentConverter}}" />
-					<controllers:StyleBinding Property="Visibility" 
-                                              Binding="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-				</controllers:StyleBindingCollection>
-			</Setter.Value>
-		</Setter>
+		<Setter Property="Width" Value="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
+		<Setter Property="HorizontalContentAlignment" 
+				Value="{Binding DataType, RelativeSource={RelativeSource Self}, 
+                                          Converter={StaticResource typeToAlignmentConverter}}" />
+		<Setter Property="Visibility" Value="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
 		<Setter Property="ContentTemplate">
 			<Setter.Value>
 				<DataTemplate>
