--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -3,9 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:company="clr-namespace:Company.Widgets.Views"
     xmlns:controllers="clr-namespace:Company.Widgets.Controllers"
-    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" 
-	xmlns:interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
-	xmlns:widgets="clr-namespace:Company.Widgets" xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:widgets="clr-namespace:Company.Widgets" xmlns:sys="clr-namespace:System;assembly=mscorlib" 
 	xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit">
 
 	<SolidColorBrush x:Key="controlColor" company:OSBrush.OSColor="ControlColor" />
@@ -61,16 +59,16 @@
 							<ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto"
 										  HorizontalScrollBarVisibility="Hidden" Padding="0" BorderBrush="{StaticResource activeBorderColor}" 
 										  controllers:ScrollExtensions.HorizontalOffset="{Binding Value, ElementName=horizontalScrollBar}">
-								<interactivity:Interaction.Behaviors>
+								<controllers:Interaction.Behaviors>
 									<controllers:ScrollOnHomeEndBehaviour />
-								</interactivity:Interaction.Behaviors>
+								</controllers:Interaction.Behaviors>
 								<widgets:DataGridFacade.Controllers>
 									<controllers:ScrollIntoViewController />
 								</widgets:DataGridFacade.Controllers>
 								<ItemsPresenter>
-									<interactivity:Interaction.Behaviors>
+									<controllers:Interaction.Behaviors>
 										<controllers:HandleNavigationBehaviour />
-									</interactivity:Interaction.Behaviors>
+									</controllers:Interaction.Behaviors>
 								</ItemsPresenter>
 							</ScrollViewer>
 							<Grid Grid.Row="2">
@@ -168,10 +166,10 @@
                                    Tag="{Binding Column, RelativeSource={RelativeSource TemplatedParent}}"
                                    Visibility="{Binding Tag.IsResizable, RelativeSource={RelativeSource Self}, 
                                                         Converter={StaticResource booleanToVisibilityConverter}}">
-								<interactivity:Interaction.Behaviors>
+								<controllers:Interaction.Behaviors>
 									<controllers:ColumnResizingBehavior />
 									<controllers:AutoSizeOnDoubleClickBehavior />
-								</interactivity:Interaction.Behaviors>
+								</controllers:Interaction.Behaviors>
 								<Thumb.Template>
 									<ControlTemplate TargetType="Thumb">
 										<Border Background="Transparent" />
@@ -240,20 +238,20 @@
 								</VisualState>
 							</VisualStateGroup>
 						</VisualStateManager.VisualStateGroups>
-						<interactivity:Interaction.Triggers>
-							<controllers:DataTrigger DataBinding="{Binding HasFocus}" Value="True">
+						<controllers:Interaction.Triggers>
+							<controllers:DataTrigger BindingValue="{Binding HasFocus, RelativeSource={RelativeSource TemplatedParent}}" Value="True">
 								<controllers:GoToStateAction StateName="Focused" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding HasFocus}" Value="False">
+							<controllers:DataTrigger BindingValue="{Binding HasFocus, RelativeSource={RelativeSource TemplatedParent}}" Value="False">
 								<controllers:GoToStateAction StateName="Unfocused" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding IsSelected}" Value="True">
+							<controllers:DataTrigger BindingValue="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" Value="True">
 								<controllers:GoToStateAction StateName="Selected" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding IsSelected}" Value="False">
+							<controllers:DataTrigger BindingValue="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" Value="False">
 								<controllers:GoToStateAction StateName="Deselected" />
 							</controllers:DataTrigger>
-						</interactivity:Interaction.Triggers>
+						</controllers:Interaction.Triggers>
 					</Border>
 				</ControlTemplate>
 			</Setter.Value>
@@ -383,44 +381,54 @@
 								</VisualState>
 							</VisualStateGroup>
 						</VisualStateManager.VisualStateGroups>
-						<interactivity:Interaction.Triggers>
-							<controllers:DataTrigger DataBinding="{Binding HasFocus}" Value="True">
+						<controllers:Interaction.Triggers>
+							<!--<controllers:DataTrigger BindingValue="{Binding HasFocus, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="True">
 								<controllers:GoToStateAction StateName="Focused" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding HasFocus}" Value="False">
+							<controllers:DataTrigger BindingValue="{Binding HasFocus, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="False">
 								<controllers:GoToStateAction StateName="Unfocused" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding IsSelected}" Value="True">
+							<controllers:DataTrigger BindingValue="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="True">
 								<controllers:GoToStateAction StateName="Selected" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding IsSelected}" Value="False">
+							<controllers:DataTrigger BindingValue="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="False">
 								<controllers:GoToStateAction StateName="Deselected" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding DataType}" Value="System.Boolean">
+							<controllers:DataTrigger BindingValue="{Binding DataType, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="System.Boolean">
 								<controllers:GoToStateAction StateName="Boolean" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding DataType}" Value="System.Nullable`1[System.Boolean]">
+							<controllers:DataTrigger BindingValue="{Binding DataType, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="System.Nullable`1[System.Boolean]">
 								<controllers:GoToStateAction StateName="Boolean" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding DataType}" Value="System.Byte[]">
+							<controllers:DataTrigger BindingValue="{Binding DataType, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="System.Byte[]">
 								<controllers:GoToStateAction StateName="Image" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding Value, Converter={StaticResource isImageUriConverter}}" Value="True">
+							<controllers:DataTrigger BindingValue="{Binding Value, Converter={StaticResource isImageUriConverter}, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="True">
 								<controllers:GoToStateAction StateName="Image" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding IsInEditMode}" Value="True">
+							<controllers:DataTrigger BindingValue="{Binding IsInEditMode, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="True">
 								<controllers:GoToStateAction StateName="Editor">
 									<sys:String>Boolean</sys:String>
 									<sys:String>Image</sys:String>
 								</controllers:GoToStateAction>
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding IsInEditMode}" Value="False">
+							<controllers:DataTrigger BindingValue="{Binding IsInEditMode, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="False">
 								<controllers:GoToStateAction StateName="View">
 									<sys:String>Boolean</sys:String>
 									<sys:String>Image</sys:String>
 								</controllers:GoToStateAction>
-							</controllers:DataTrigger>
-						</interactivity:Interaction.Triggers>
+							</controllers:DataTrigger>-->
+						</controllers:Interaction.Triggers>
 					</Border>
 				</ControlTemplate>
 			</Setter.Value>
@@ -530,20 +538,24 @@
 								</VisualState>
 							</VisualStateGroup>
 						</VisualStateManager.VisualStateGroups>
-						<interactivity:Interaction.Triggers>
-							<controllers:DataTrigger DataBinding="{Binding DataType}" Value="System.String">
+						<controllers:Interaction.Triggers>
+							<controllers:DataTrigger BindingValue="{Binding DataType, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="System.String">
 								<controllers:GoToStateAction StateName="EditText" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding DataType}" Value="System.DateTime">
+							<controllers:DataTrigger BindingValue="{Binding DataType, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="System.DateTime">
 								<controllers:GoToStateAction StateName="EditDate" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding DataType}" Value="System.Nullable`1[System.DateTime]">
+							<controllers:DataTrigger BindingValue="{Binding DataType, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="System.Nullable`1[System.DateTime]">
 								<controllers:GoToStateAction StateName="EditDate" />
 							</controllers:DataTrigger>
-							<controllers:DataTrigger DataBinding="{Binding DataType, Converter={StaticResource isTypeNumericConverter}}" Value="True">
+							<controllers:DataTrigger BindingValue="{Binding DataType, Converter={StaticResource isTypeNumericConverter}, RelativeSource={RelativeSource TemplatedParent}}" 
+													 Value="True">
 								<controllers:GoToStateAction StateName="EditNumber" />
 							</controllers:DataTrigger>
-						</interactivity:Interaction.Triggers>
+						</controllers:Interaction.Triggers>
 					</Border>
 				</ControlTemplate>
 			</Setter.Value>
@@ -573,9 +585,9 @@
 									  controllers:ScrollExtensions.HorizontalOffset="{Binding Tag.Value, 
 																							  RelativeSource={RelativeSource TemplatedParent},
 																							  Mode=TwoWay}">
-							<interactivity:Interaction.Behaviors>
+							<controllers:Interaction.Behaviors>
 								<controllers:SyncScrollBehavior />
-							</interactivity:Interaction.Behaviors>
+							</controllers:Interaction.Behaviors>
 							<widgets:DataGridFacade.Controllers>
 								<controllers:ScrollIntoViewController />
 							</widgets:DataGridFacade.Controllers>
