Completed the drag-scrolling, must add drag-selection now.
There is some strange slowing down before the last (if scrolling down) or first (if scrolling up) rows are reached. May be worth checking.

Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -62,6 +62,7 @@
 										  controllers:ScrollExtensions.HorizontalOffset="{Binding Value, ElementName=horizontalScrollBar}">
 								<interactivity:Interaction.Behaviors>
 									<controllers:ScrollOnHomeEndBehaviour />
+									<controllers:DragScrollBehavior />
 								</interactivity:Interaction.Behaviors>
 								<widgets:DataGridFacade.Controllers>
 									<controllers:ScrollIntoViewController />
